fix: nowrap on sidebar flairs

--- a/src/extensions/community_extensions/_clippyPoint-styles.scss
+++ b/src/extensions/community_extensions/_clippyPoint-styles.scss
@@ -121,6 +121,12 @@ html.res-commentBoxes.res-commentBoxes-rounded .comment {
   }
 }
 
+.sidecontentbox {
+  li {
+    white-space: nowrap;
+  }
+}
+
 // End Clippy Point Flair styling - Link Flair
 
 // Bot User Flair
